<resources>
    <string name="app_name">Sampahku</string>
    <string name="login_msg_1">Selamat Datang Kembali!</string>
    <string name="register_msg">Silahkan daftar disini</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="nama">Nama</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar sekarang</string>
    <string name="login_btn">Masuk</string>
    <string name="register_btn">Register</string>
    <string name="text_banner_1">Selamat datang di Sampahku!</string>
    <string name="text_banner_2">Sampahku adalah solusi untuk mengatasi masalah sampah di lingkungan anda</string>
    <string name="point_msg_1">Saldo Anda</string>
    <string name="point_msg_2">Tukar Saldo</string>
    <string name="menu_kategori">Menu</string>
    <string name="img_banner">Image</string>
    <string name="pickup_msg">Pickup Sampah</string>
    <string name="lokasi_msg">Lokasi Bank Sampah</string>
    <string name="tukar_msg">Tukar Sampah</string>
    <string name="donasi_msg">Donasi Sampah</string>
    <string name="warning_msg">Masukan data dengan benar!</string>
    <string name="adddata_msg">Masukan Data Dengan Benar!</string>
    <string name="pickup">Ajukan Pickup</string>
    <string name="pickup_tgl">Tanggal pickup</string>
    <string name="pickup_alamat">Alamat</string>
    <string name="pickup_jenis">Jenis sampah</string>
    <string name="pickup_berat">Berat sampah</string>
    <string name="user_name">User name</string>
    <string name="alamat">Alamat</string>
    <string name="user_email">User email</string>
    <string name="no_handphone">Nomor handphone</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="simpan">Simpan</string>
    <string name="nama_bank_sampah">Nama bank sampah</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="no_telp_fax">No.Telp/Fax</string>
    <string name="kategori">Kategori</string>
    <string name="error_email">Invalid email</string>
    <string name="error_pass">password less than 6 characters</string>
    <string name="todo">TODO</string>
    <string name="selamat_datang">Selamat Datang, Reza!</string>
    <string name="masuk_untuk_melanjutkan">Masuk untuk melanjutkan</string>
    <string name="don_t_have_an_account">Tidak punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="masuk">Masuk</string>
    <string name="copyright">© 2022 Bangkit</string>
    <string name="title_welcome_page">SELAMAT DATANG!</string>
    <string name="title_welcome_page2">Silahkan masuk untuk melanjutkan</string>


    <string name="tukar_berat">Berat sampah (kg)</string>
    <string name="tukar_pendapatan">Total pendapatan</string>

    <string-array name="kategori_sampah">
        <item>Plastik</item>
        <item>Logam</item>
        <item>Kertas</item>
        <item>Karet</item>
    </string-array>
    <string-array name="harga_sampah">
        <item>1500</item>
        <item>3000</item>
        <item>800</item>
        <item>1000</item>
    </string-array>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="camera">Camera</string>
    <string name="profile">Profile</string>
    <string name="riwayat">Riwayat</string>
    <string name="title_activity_main">Sampahku</string>
    <string name="informasi_sampah">Informasi Sampah</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nasabah_msg">Pickup Sampah</string>
    <string name="transaksi_msg">Pickup Sampah</string>
    <string name="riwayat_msg">Pickup Sampah</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="masukan_berat_sampah">Masukan berat sampah</string>
    <string name="masukan_alamat">Masukan alamat</string>
    <string name="tukar_sampah">Tukar Sampah</string>
    <string name="masukan_nama_lengkap">Masukan nama lengkap</string>
    <string name="rp_1500">Rp. 1500</string>
    <string name="buat_pengajuan_pickup">Buat Pengajuan Pickup</string>
    <string name="pickup_sampah">Pickup Sampah</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>