<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.adityakarang.sampahku.view.role.user.navigation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.adityakarang.sampahku.view.role.user.navigation.notifications.NotificationsFragment"
        android:label="@string/camera"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_riwayat"
        android:name="com.adityakarang.sampahku.view.role.user.navigation.notifications.NotificationsFragment"
        android:label="riwayat"
        tools:layout="@layout/fragment_riwayat" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.adityakarang.sampahku.view.role.user.navigation.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>