<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".view.bottomnav.ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="493dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView5"
            android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selamat_datang"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"

        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="19dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/point_msg_1"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_cash"
                    app:drawableEndCompat="@drawable/ic_shield_check" />

                <TextView
                    android:id="@+id/tvPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tukar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_tukar"
                android:layout_marginEnd="14dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/point_msg_2"
                android:textColor="@color/green"
                android:textSize="14sp"
                tools:ignore="UseCompatTextViewDrawableXml" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <RelativeLayout
            android:layout_width="366dp"
            android:layout_height="157dp">


            <ImageView
                android:id="@+id/imageBanner"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/img_banner"
                android:padding="30dp"
                android:src="@drawable/ic_undraw_throw" />

            <LinearLayout
                android:layout_width="197dp"
                android:layout_height="147dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="1dp"
                android:layout_toEndOf="@id/imageBanner"
                android:gravity="start|center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="166dp"
                    android:layout_height="55dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/text_banner_1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="169dp"
                    android:layout_height="74dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/text_banner_2"
                    android:textColor="@color/black"
                    android:layout_marginEnd="8dp"
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/menu_kategori"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView5" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <include layout="@layout/kategori_menu" />

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>